# tiny_ds

./: CMakeLists.txt  main.cpp  main.out  main.s  roadmap.md
.github/workflows/: cpp_ci.yml
data/: lr.csv  test.csv
docs/: step_ci_and_build.md
include/: csv_loader.hpp  linear_regression.hpp  matrix.hpp
tests/: matrix_tests.cpp
